--- a/assets/styles.css
+++ b/assets/styles.css
@@ -763,6 +763,7 @@ button {
     grid-template-columns: repeat(1, 1fr);
     padding-bottom: 41px;
     border-bottom: 20px solid #8d9b3c;
+    height: auto;
   }
   .citrusAcana__Middle_textContainer p,
   .citrusAcana__secondSlide__textContainer p {
