slider pagination & product scrollar mobile added some tab

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -399,8 +399,8 @@ ul.splide__pagination {
   justify-content: center;
   column-gap: 10px;
   position: absolute;
-  bottom: -20px;
-  left: calc(100% / 2 - 40px);
+  bottom: -17px;
+  left: calc(100% / 2 - 50px);
   text-align: center;
   background: rgb(189 189 189 / 80%);
   border-radius: 5px 5px 0 0;
@@ -801,6 +801,9 @@ button {
   }
   .citrus_meet_tab_item {
     font-size: 12px;
+  }
+  .cirtus_meet_tabs_main_22_hide_arrow .splide__arrows {
+    display: block;
   }
   /* -------------------------- */
   .citrusAcana__sectionTitle h2 {
